// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CredentialsContext should apply a hook for retrieving data from multiple selectors: selector responses 1`] = `
Object {
  "errorResponse": Object {
    "data": Array [],
    "date": undefined,
    "error": true,
    "errorMessage": "Lorem ipsum",
    "expandedRows": undefined,
    "fulfilled": undefined,
    "hasData": false,
    "pending": undefined,
    "selectedRows": undefined,
    "totalResults": 0,
  },
  "fulfilledResponse": Object {
    "data": Array [
      "dolor",
      "sit",
    ],
    "date": undefined,
    "error": undefined,
    "errorMessage": undefined,
    "expandedRows": undefined,
    "fulfilled": true,
    "hasData": false,
    "pending": undefined,
    "selectedRows": undefined,
    "totalResults": 0,
  },
  "mockStoreSuccessResponse": Object {
    "data": Array [
      "lorem",
      "ipsum",
    ],
    "date": undefined,
    "error": false,
    "errorMessage": null,
    "expandedRows": Object {},
    "fulfilled": true,
    "hasData": false,
    "pending": false,
    "selectedRows": Object {},
    "totalResults": 0,
  },
  "pendingResponse": Object {
    "data": Array [],
    "date": undefined,
    "error": undefined,
    "errorMessage": undefined,
    "expandedRows": undefined,
    "fulfilled": undefined,
    "hasData": false,
    "pending": true,
    "selectedRows": undefined,
    "totalResults": 0,
  },
}
`;

exports[`CredentialsContext should apply a hook for returning a get response: get responses 1`] = `
Object {
  "errorResponse": Object {
    "error": true,
    "message": "Lorem ipsum",
  },
  "fulfilledResponse": Object {
    "data": Object {
      "view": Object {
        "results": Array [
          "dolor",
          "sit",
        ],
      },
    },
    "fulfilled": true,
  },
  "mockStoreSuccessResponse": Object {
    "data": Array [
      "lorem",
      "ipsum",
    ],
    "date": undefined,
    "error": false,
    "errorMessage": null,
    "expandedRows": Object {},
    "fulfilled": true,
    "hasData": false,
    "pending": false,
    "selectedRows": Object {},
    "totalResults": 0,
  },
  "pendingResponse": Object {
    "pending": true,
  },
}
`;

exports[`CredentialsContext should handle deleting a credential with a confirmation: dispatch onDelete 1`] = `
Array [
  Array [
    Object {
      "body": undefined,
      "confirmButtonText": "t(form-dialog.label, {\\"context\\":\\"delete\\"})",
      "heading": "t(form-dialog.confirmation_heading, {\\"context\\":\\"delete-credential\\",\\"count\\":1,\\"name\\":\\"lorem ipsum name\\"}, [object Object])",
      "onConfirm": [Function],
      "title": "t(form-dialog.confirmation_title, {\\"context\\":\\"delete-credential\\",\\"count\\":1})",
    },
  ],
]
`;

exports[`CredentialsContext should return specific properties: specific properties 1`] = `
Object {
  "INITIAL_QUERY": Object {
    "ordering": "name",
    "page": 1,
    "page_size": 10,
  },
  "VIEW_ID": "credentials",
  "useCredentials": [Function],
  "useGetCredentials": [Function],
  "useOnDelete": [Function],
  "useOnEdit": [Function],
  "useOnExpand": [Function],
  "useOnSelect": [Function],
}
`;
